完成日志查看
